fix c-subtab-option-container collapsing text
Resolves #1998 and similar issues

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1678,6 +1678,8 @@ screen and (max-width: 480px) {
   display: flex;
   flex-direction: row;
   padding-bottom: 0.8rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .s-base--metro .c-subtab-option-container {
